Responsividad y arreglo de warnings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pablohdzc.github.io/my-app",
+  "homepage": "https://pablotz.github.io/phc__portafolio/",
   "name": "phc__portafolio",
   "version": "0.1.0",
   "private": true,
